--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -37,7 +37,7 @@ server {
     # Add stdout logging
 
     access_log /var/log/nginx/$hostname-access-$year-$month-$day.log;
-    error_log /var/log/nginx/error.log info;
+    error_log /var/log/nginx/error.log error;
 
     location / {
         # First attempt to serve request as file, then
