--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -22,7 +22,7 @@ server {
     index index.php index.html index.htm;
     port_in_redirect off;    
     server_name _;
-
+    large_client_header_buffers 4 4k;
     # Make site accessible from http://localhost/
     #server_name localhost;
     
@@ -61,7 +61,12 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
-        fastcgi_buffering off;
+        proxy_buffer_size   128k;
+        proxy_buffers   4 256k;
+        proxy_busy_buffers_size   256k;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
         include fastcgi_params;
     }
 
