--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -64,10 +64,17 @@ server {
         proxy_buffer_size   128k;
         proxy_buffers   4 256k;
         proxy_busy_buffers_size   256k;
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
         include fastcgi_params;
+        fastcgi_intercept_errors on; 
+        fastcgi_ignore_client_abort off; 
+        fastcgi_connect_timeout 60; 
+        fastcgi_send_timeout 180; 
+        fastcgi_read_timeout 300; 
+        fastcgi_buffer_size 128k; 
+        fastcgi_buffers 4 256k; 
+        fastcgi_busy_buffers_size 256k; 
+        fastcgi_temp_file_write_size 256k;
+        fastcgi_buffering off;
     }
 
     location ~ /\. {
