--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -54,6 +54,10 @@ server {
         root /usr/share/nginx/html;
     }
 
+    location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+        expires 30d;
+    }
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
