add openshift logs

--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -36,7 +36,7 @@ server {
 
     # Add stdout logging
 
-    access_log /var/log/nginx/$hostname-access-$year-$month-$day.log;
+    access_log /var/log/nginx/$hostname-access-$year-$month-$day.log openshift_log;
     error_log /var/log/nginx/error.log error;
 
     location / {
