--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -20,12 +20,12 @@ server {
 
     root /var/www/html;
     index index.php index.html index.htm;
-    port_in_redirect off;    
+    port_in_redirect off;
     server_name _;
     large_client_header_buffers 4 4k;
     # Make site accessible from http://localhost/
     #server_name localhost;
-    
+
     # If block for setting the time for the logfile
     if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})") {
        set $year $1;
@@ -69,16 +69,17 @@ server {
         proxy_buffers   4 256k;
         proxy_busy_buffers_size   256k;
         include fastcgi_params;
-        fastcgi_intercept_errors on; 
-        fastcgi_ignore_client_abort off; 
-        fastcgi_connect_timeout 60; 
-        fastcgi_send_timeout 180; 
-        fastcgi_read_timeout 300; 
-        fastcgi_buffer_size 128k; 
-        fastcgi_buffers 4 256k; 
-        fastcgi_busy_buffers_size 256k; 
+        fastcgi_intercept_errors on;
+        fastcgi_ignore_client_abort off;
+        fastcgi_connect_timeout 60;
+        fastcgi_send_timeout 180;
+        fastcgi_read_timeout 300;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
         fastcgi_temp_file_write_size 256k;
         fastcgi_buffering off;
+        fastcgi_param REMOTE_ADDR $http_x_forwarded_for;
     }
 
     location ~ /\. {
