added server_name param for wordpress

--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -80,6 +80,7 @@ server {
         fastcgi_temp_file_write_size 256k;
         fastcgi_buffering off;
         fastcgi_param REMOTE_ADDR $http_x_forwarded_for;
+        fastcgi_param SERVER_NAME $http_host;
     }
 
     location ~ /\. {
