--- a/files/etc/nginx/sites-enabled/site.conf
+++ b/files/etc/nginx/sites-enabled/site.conf
@@ -34,6 +34,11 @@ server {
     }
     sendfile on;
 
+	set $http_x_forwarded_for_filt $http_x_forwarded_for;
+	if ($http_x_forwarded_for_filt ~ ([0-9]+\.[0-9]+\.[0-9]+\.)[0-9]+) {
+		set $http_x_forwarded_for_filt $1???;
+	}
+
     # Add stdout logging
 
     access_log /var/log/nginx/$hostname-access-$year-$month-$day.log openshift_log;
